[tool.poetry]
name = "clicktrack"
version = "0.2.0"
description = ""
authors = ["Johann Fridriksson <johann.fridriksson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.24.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
clicktrack = "clicktrack.main:main"
